
[TestImportDeclarations/default_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: 1:8-1:11,
            },
            From: "module",
            span: 1:1-1:25,
        },
    },
}
---

[TestImportDeclarations/named_import_single - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
            },
            From: "module",
            span: 1:1-1:29,
        },
    },
}
---

[TestImportDeclarations/named_import_multiple - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "baz",
                        span: 1:20-1:23,
                    },
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: 1:20-1:23,
                    },
                    span: 1:20-1:23,
                },
            },
            From: "module",
            span: 1:1-1:39,
        },
    },
}
---

[TestImportDeclarations/named_import_with_alias - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:17-1:20,
                    },
                    span: 1:10-1:20,
                },
            },
            From: "module",
            span: 1:1-1:36,
        },
    },
}
---

[TestImportDeclarations/named_import_mixed - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: 1:22-1:25,
                    },
                    span: 1:15-1:25,
                },
            },
            From: "module",
            span: 1:1-1:41,
        },
    },
}
---

[TestImportDeclarations/namespace_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamespaceAs: &dts_parser.Ident{
                Name: "foo",
                span: 1:13-1:16,
            },
            From: "module",
            span: 1:1-1:30,
        },
    },
}
---

[TestImportDeclarations/default_and_named - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: 1:8-1:11,
            },
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
            },
            From: "module",
            span: 1:1-1:34,
        },
    },
}
---

[TestImportDeclarations/default_and_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: 1:8-1:11,
            },
            NamespaceAs: &dts_parser.Ident{
                Name: "bar",
                span: 1:18-1:21,
            },
            From: "module",
            span: 1:1-1:35,
        },
    },
}
---

[TestImportDeclarations/side_effect_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            From: "module",
            span: 1:1-1:16,
        },
    },
}
---

[TestImportDeclarations/type-only_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:15-1:18,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
            },
            From: "module",
            TypeOnly: true,
            span: 1:1-1:34,
        },
    },
}
---

[TestImportDeclarations/type-only_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamespaceAs: &dts_parser.Ident{
                Name: "foo",
                span: 1:18-1:21,
            },
            From: "module",
            TypeOnly: true,
            span: 1:1-1:35,
        },
    },
}
---

[TestImportDeclarations/trailing_comma - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
            },
            From: "module",
            span: 1:1-1:35,
        },
    },
}
---

[TestExportDeclarations/export_variable - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.VarDecl{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:20-1:21,
            },
            TypeAnn: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:23-1:29,
            },
            export: true,
            declare: true,
            span: 1:16-1:29,
        },
    },
}
---

[TestExportDeclarations/export_function - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.FuncDecl{
            Name: &dts_parser.Ident{
                Name: "foo",
                span: 1:25-1:28,
            },
            ReturnType: &dts_parser.PrimitiveType{
                Kind: 2,
                span: 1:32-1:36,
            },
            export: true,
            declare: true,
            span: 1:16-1:36,
        },
    },
}
---

[TestExportDeclarations/export_type_alias - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:13-1:16,
            },
            TypeAnn: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:19-1:25,
            },
            export: true,
            span: 1:8-1:25,
        },
    },
}
---

[TestExportDeclarations/export_interface - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 1:18-1:21,
            },
            Members: []dts_parser.InterfaceMember{
                &dts_parser.PropertySignature{
                    Name: &dts_parser.Ident{
                        Name: "x",
                        span: 1:24-1:25,
                    },
                    TypeAnn: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:27-1:33,
                    },
                    span: 1:24-1:33,
                },
            },
            export: true,
            span: 1:8-1:35,
        },
    },
}
---

[TestExportDeclarations/export_class - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Baz",
                span: 1:22-1:25,
            },
            export: true,
            declare: true,
            span: 1:16-1:28,
        },
    },
}
---

[TestExportDeclarations/export_enum - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.EnumDecl{
            Name: &dts_parser.Ident{
                Name: "Color",
                span: 1:13-1:18,
            },
            Members: []*dts_parser.EnumMember{
                &dts_parser.EnumMember{
                    Name: &dts_parser.Ident{
                        Name: "Red",
                        span: 1:21-1:24,
                    },
                    span: 1:21-1:24,
                },
                &dts_parser.EnumMember{
                    Name: &dts_parser.Ident{
                        Name: "Green",
                        span: 1:26-1:31,
                    },
                    span: 1:26-1:31,
                },
                &dts_parser.EnumMember{
                    Name: &dts_parser.Ident{
                        Name: "Blue",
                        span: 1:33-1:37,
                    },
                    span: 1:33-1:37,
                },
            },
            export: true,
            span: 1:8-1:39,
        },
    },
}
---

[TestExportDeclarations/export_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamespaceDecl{
            Name: &dts_parser.Ident{
                Name: "Utils",
                span: 1:18-1:23,
            },
            export: true,
            span: 1:8-1:27,
        },
    },
}
---

[TestExportDeclarations/named_export_single - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
            },
            span: 1:1-1:13,
        },
    },
}
---

[TestExportDeclarations/named_export_multiple - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: 1:20-1:23,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "baz",
                        span: 1:20-1:23,
                    },
                    span: 1:20-1:23,
                },
            },
            span: 1:1-1:23,
        },
    },
}
---

[TestExportDeclarations/named_export_with_alias - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:17-1:20,
                    },
                    span: 1:10-1:20,
                },
            },
            span: 1:1-1:20,
        },
    },
}
---

[TestExportDeclarations/named_export_mixed - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "baz",
                        span: 1:22-1:25,
                    },
                    span: 1:15-1:25,
                },
            },
            span: 1:1-1:25,
        },
    },
}
---

[TestExportDeclarations/export_all - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAllStmt{
            From: "module",
            span: 1:1-1:23,
        },
    },
}
---

[TestExportDeclarations/export_all_as_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAllStmt{
            AsName: &dts_parser.Ident{
                Name: "foo",
                span: 1:13-1:16,
            },
            From: "module",
            span: 1:1-1:30,
        },
    },
}
---

[TestExportDeclarations/export_from_module - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
            },
            From: "module",
            span: 1:1-1:29,
        },
    },
}
---

[TestExportDeclarations/export_from_with_alias - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:17-1:20,
                    },
                    span: 1:10-1:20,
                },
            },
            From: "module",
            span: 1:1-1:36,
        },
    },
}
---

[TestExportDeclarations/export_default_interface - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:26-1:29,
            },
            export: true,
            default_: true,
            span: 1:16-1:33,
        },
    },
}
---

[TestExportDeclarations/export_default_type - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.TypeDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:21-1:24,
            },
            TypeAnn: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:27-1:33,
            },
            export: true,
            default_: true,
            span: 1:16-1:33,
        },
    },
}
---

[TestExportDeclarations/export_assignment - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAssignmentStmt{
            Name: &dts_parser.Ident{
                Name: "foo",
                span: 1:10-1:13,
            },
            span: 1:1-1:13,
        },
    },
}
---

[TestExportDeclarations/export_as_namespace - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAsNamespaceStmt{
            Name: &dts_parser.Ident{
                Name: "MyLib",
                span: 1:21-1:26,
            },
            span: 1:1-1:26,
        },
    },
}
---

[TestExportDeclarations/type-only_export - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "Foo",
                        span: 1:15-1:18,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "Foo",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
            },
            TypeOnly: true,
            span: 1:1-1:18,
        },
    },
}
---

[TestExportDeclarations/trailing_comma - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
            },
            span: 1:1-1:18,
        },
    },
}
---

[TestComplexImportExportScenarios/multiple_imports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
            },
            From: "a",
            span: 1:1-1:24,
        },
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 2:13-2:16,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 2:13-2:16,
                    },
                    span: 2:13-2:16,
                },
            },
            From: "b",
            span: 2:4-2:27,
        },
        &dts_parser.ImportDecl{
            NamespaceAs: &dts_parser.Ident{
                Name: "c",
                span: 3:16-3:17,
            },
            From: "c",
            span: 3:4-3:26,
        },
    },
}
---

[TestComplexImportExportScenarios/imports_and_exports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "Foo",
                        span: 1:10-1:13,
                    },
                    Local: &dts_parser.Ident{
                        Name: "Foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
            },
            From: "lib",
            span: 1:1-1:26,
        },
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 2:21-2:24,
            },
            Extends: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Foo",
                        span: 2:33-2:36,
                    },
                    span: 2:33-2:36,
                },
            },
            export: true,
            span: 2:11-2:40,
        },
    },
}
---

[TestComplexImportExportScenarios/re-export_pattern - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
            },
            From: "module",
            span: 1:1-1:34,
        },
        &dts_parser.ExportAllStmt{
            From: "other",
            span: 2:4-2:25,
        },
    },
}
---

[TestComplexImportExportScenarios/type-only_imports_and_exports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "A",
                        span: 1:15-1:16,
                    },
                    Local: &dts_parser.Ident{
                        Name: "A",
                        span: 1:15-1:16,
                    },
                    span: 1:15-1:16,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "B",
                        span: 1:18-1:19,
                    },
                    Local: &dts_parser.Ident{
                        Name: "B",
                        span: 1:18-1:19,
                    },
                    span: 1:18-1:19,
                },
            },
            From: "types",
            TypeOnly: true,
            span: 1:1-1:34,
        },
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "A",
                        span: 2:18-2:19,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "A",
                        span: 2:18-2:19,
                    },
                    span: 2:18-2:19,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "B",
                        span: 2:21-2:22,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "B",
                        span: 2:21-2:22,
                    },
                    span: 2:21-2:22,
                },
            },
            TypeOnly: true,
            span: 2:4-2:22,
        },
    },
}
---

[TestComplexImportExportScenarios/mixed_exports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.InterfaceDecl{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:18-1:21,
            },
            export: true,
            span: 1:8-1:25,
        },
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 2:13-2:16,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 2:13-2:16,
                    },
                    span: 2:13-2:16,
                },
            },
            From: "lib",
            span: 2:4-2:29,
        },
        &dts_parser.ClassDecl{
            Name: &dts_parser.Ident{
                Name: "Baz",
                span: 3:25-3:28,
            },
            export: true,
            default_: true,
            span: 3:19-3:32,
        },
    },
}
---

[TestModuleErrorCases/import_without_from - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 1:15-1:15,
            Message: "Expected 104 but got 23",
        },
        &dts_parser.Error{
            Span: 1:1-1:7,
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{},
}
---

[TestModuleErrorCases/import_missing_braces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 1:13-1:16,
            Message: "Expected 104 but got 39",
        },
        &dts_parser.Error{
            Span: 1:1-1:7,
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: 1:17-1:21,
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: 1:17-1:21,
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: 1:22-1:30,
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: 1:22-1:30,
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{},
}
---

[TestModuleErrorCases/export_without_name - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{
        Statements: {
        },
    },
}
---

[TestModuleErrorCases/malformed_namespace_import - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 1:10-1:13,
            Message: "Expected 105 but got 39",
        },
        &dts_parser.Error{
            Span: 1:1-1:7,
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: 1:14-1:18,
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: 1:14-1:18,
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: 1:19-1:27,
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: 1:19-1:27,
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{},
}
---

[TestModuleErrorCases/export_=_without_identifier - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 1:10-1:10,
            Message: "Expected identifier",
        },
        &dts_parser.Error{
            Span: 1:1-1:7,
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{},
}
---

[TestExportDeclarations/export_without_any_exports - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            span: 1:1-1:7,
        },
    },
}
---

[TestImportDeclarations/single_quote_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: 1:8-1:11,
            },
            From: "module",
            span: 1:1-1:25,
        },
    },
}
---

[TestImportDeclarations/single_quote_named_import - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            NamedImports: []*dts_parser.ImportSpecifier{
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
            },
            From: "module",
            span: 1:1-1:34,
        },
    },
}
---

[TestImportDeclarations/single_quote_side_effect - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ImportDecl{
            From: "side-effects",
            span: 1:1-1:22,
        },
    },
}
---

[TestExportDeclarations/single_quote_export_all - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.ExportAllStmt{
            From: "module",
            span: 1:1-1:23,
        },
    },
}
---

[TestExportDeclarations/single_quote_export_from - 1]
&dts_parser.Module{
    Statements: []dts_parser.Statement{
        &dts_parser.NamedExportStmt{
            Specifiers: []*dts_parser.ExportSpecifier{
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: 1:15-1:18,
                    },
                    span: 1:15-1:18,
                },
            },
            From: "module",
            span: 1:1-1:34,
        },
    },
}
---
